add description and repo link

--- a/Shared/Components/DarkSwitch.razor
+++ b/Shared/Components/DarkSwitch.razor
@@ -1,6 +1,6 @@
 @namespace TailBlazor.Shared.Components
 
-<div class="flex items-center text-gray-900 rounded-full cursor-pointer dark:text-gray-100">
+<div class="flex text-gray-900 rounded-full cursor-pointer dark:text-gray-100">
 
     <div title="light mode" class="p-2 rounded-tl rounded-bl focus:outline-none bg-gray-100 active:bg-gray-200 dark:bg-gray-600" @onclick='_ => setTheme("light")'>
         <div class="m-auto transform hover:scale-150 w-4 h-4 @(currentTheme == "light" ? "" : "opacity-40")">
