add dark mode to visit repo button

--- a/Shared/Layouts/MainLayout.razor
+++ b/Shared/Layouts/MainLayout.razor
@@ -23,7 +23,7 @@
         <button type="button" 
                 class="flex pl-1 pr-2 m-auto py-1 space-x-3 rounded-lg
                        ring-1 ring-accent-400
-
+                       dark:bg-gray-800 dark:text-gray-300
                        bg-gray-300 text-gray-800
                         focus:outline-none
                         hover:scale-105 transform transition-transform duration-75"
