move to tailwind 2.2

--- a/Shared/Components/Loading.razor
+++ b/Shared/Components/Loading.razor
@@ -3,7 +3,7 @@
 <div style="background-image: repeating-conic-gradient(#539ffd 0 12deg, #0576f8 12deg 24deg);" 
      class="rounded-full w-32 h-32 m-auto @animation">
         <div class="absolute w-full h-full p-3 rounded-full
-                    transform transition-transform ease-in duration-400 hover:scale-110">
+                    transition-transform ease-in duration-400 hover:scale-110">
                   
           <svg xmlns="http://www.w3.org/2000/svg" id="svg1923" viewBox="0 0 733 733">
             <circle cy="366.5" cx="366.5" r="366.5"></circle>
