--- a/Shared/Pages/Index.razor
+++ b/Shared/Pages/Index.razor
@@ -16,7 +16,7 @@ else
         <ol class="flex items-center w-max p-6 animate-hscroll">
         @foreach(var person in people)
         {
-            <li class="transform transition duration-75 ease-in-out
+            <li class="transition duration-75 ease-in-out
                     even:rotate-1 odd:-rotate-2 
                     hover:rotate-0 hover:scale-105 md:hover:scale-110">
                 <PersonCard Person=person/>
