use line-clamp plugin to handle Person.Bio overflow - Fixes #7

--- a/Shared/Components/PersonCard/PersonCard.razor
+++ b/Shared/Components/PersonCard/PersonCard.razor
@@ -11,8 +11,7 @@
         <div class="pr-2 md:pr-4 font-bold text-2xl right-2 overflow-hidden self-center" >@Person.Name</div>
     </div>
 
-    <div class="flex p-2 overflow-hidden h-2/3
-                text-sm md:text-base italic">@Person.Bio</div>
+    <p class="px-2 pt-2 text-sm md:text-base italic line-clamp-5">@Person.Bio</p>
 
 </div>
 
