--- a/Shared/Pages/Index.razor
+++ b/Shared/Pages/Index.razor
@@ -34,6 +34,6 @@ else
 
     protected override async Task OnParametersSetAsync()
     {
-         people = (await PersonService.GetPeopleAsync(50)).ToArray();
+         people = (await PersonService!.GetPeopleAsync(30))?.ToArray();
     }
 }
