--- a/Shared/Components/PersonCard/PersonCard.razor
+++ b/Shared/Components/PersonCard/PersonCard.razor
@@ -1,21 +1,24 @@
 ﻿@namespace TailBlazor.Shared.Components
 
-<div class="personCard">
+@if(Person is not null)
+{
+    <div class="personCard">
 
-    <div class="flex justify-between h-1/4 p-2
-              bg-secondary-100 dark:bg-primary-700 border-b-2 border-accent-100
-                rounded-t-lg md:rounded-t-xl">
+        <div class="flex justify-between h-1/4 p-2
+                bg-secondary-100 dark:bg-primary-700 border-b-2 border-accent-100
+                    rounded-t-lg md:rounded-t-xl">
 
-        <div class="p-1 md:p-2 text-xl md:text-3xl self-center">@Person.Image</div>
+            <div class="p-1 md:p-2 text-xl md:text-3xl self-center">@Person.Image</div>
 
-        <div class="pr-2 md:pr-4 font-bold text-2xl right-2 overflow-hidden self-center" >@Person.Name</div>
+            <div class="pr-2 md:pr-4 font-bold text-2xl right-2 overflow-hidden self-center" >@Person.Name</div>
+        </div>
+
+        <p class="px-3 pt-2 text-sm md:text-base italic line-clamp-5">@Person.Bio</p>
+
     </div>
-
-    <p class="px-2 pt-2 text-sm md:text-base italic line-clamp-5">@Person.Bio</p>
-
-</div>
+}
 
 @code
 {
-    [Parameter] public Person Person { get; set; }
+    [Parameter] public Person? Person { get; set; }
 }
