add a no-hover screen Fixes #16

--- a/Shared/Components/PersonCard/PersonCard.razor
+++ b/Shared/Components/PersonCard/PersonCard.razor
@@ -10,7 +10,7 @@
 
             <div class="p-1 md:p-2 text-xl md:text-3xl self-center">@Person.Image</div>
 
-            <div class="pr-2 md:pr-4 font-bold text-2xl right-2 overflow-hidden self-center" >@Person.Name</div>
+            <div class="pr-2 md:pr-4 font-bold text-xl right-2 overflow-hidden self-center" >@Person.Name</div>
         </div>
 
         <p class="px-3 pt-2 text-sm md:text-base italic line-clamp-5">@Person.Bio</p>
