--- a/Shared/Pages/Index.razor
+++ b/Shared/Pages/Index.razor
@@ -18,7 +18,8 @@ else
         {
             <li class="transition duration-75 ease-in-out
                     even:rotate-1 odd:-rotate-2 
-                    hover:rotate-0 hover:scale-105 md:hover:scale-110">
+                    hover:rotate-0 hover:scale-105 md:hover:scale-110
+                    no-hover:even:font-serif">
                 <PersonCard Person=person/>
             </li>
         }
