Show use of CSS custom properties / variables in tailwind.config.js Fixes #10

--- a/Shared/Components/PersonCard/PersonCard.razor
+++ b/Shared/Components/PersonCard/PersonCard.razor
@@ -5,7 +5,7 @@
     <div class="personCard">
 
         <div class="flex justify-between h-1/4 p-2
-                bg-secondary-100 dark:bg-primary-700 border-b-2 border-accent-100
+                bg-secondary-100 dark:bg-primary-700 border-b border-accent
                     rounded-t-lg md:rounded-t-xl">
 
             <div class="p-1 md:p-2 text-xl md:text-3xl self-center">@Person.Image</div>
