cursor-pointer instead of text selection

--- a/Shared/Components/PersonCard/PersonCard.razor.css
+++ b/Shared/Components/PersonCard/PersonCard.razor.css
@@ -4,5 +4,7 @@
   @apply md:shadow-md md:rounded-xl md:h-64 md:w-96 md:m-4;
   @apply ring-2 hover:ring-4 ring-accent;
   @apply transition-all duration-300;
+  @apply hover:cursor-pointer;
+
   backface-visibility: hidden;
 }
