--- a/Shared/Layouts/MainLayout.razor
+++ b/Shared/Layouts/MainLayout.razor
@@ -4,7 +4,7 @@
 @inherits LayoutComponentBase
 @inject NavigationManager navManager
 
-<div class="flex flex-col justify-between h-full @accentColor" @onclick="changeAccent">
+<div class="flex flex-col justify-between h-full select-none @accentColor" @onclick="changeAccent">
 
     <div class="flex justify-center pt-[10px]">
         <DarkSwitch />
