revert single-directory tailwind output scripts

--- a/Server/Pages/_Host.cshtml
+++ b/Server/Pages/_Host.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Client</title>
-    <link rel="stylesheet" href="/Shared.css" />
+    <link rel="stylesheet" href="/site.min.css" />
     <base href="/" />
 </head>
 
