--- a/Source/RazorClassLibrary/Shared.css
+++ b/Source/RazorClassLibrary/Shared.css
@@ -1,4 +1,4 @@
-@import "/obj/scopedcss/bundle/RazorClassLibrary.styles.css";
+@import "./obj/scopedcss/bundle/RazorClassLibrary.styles.css";
 
 #blazor-error-ui {
   background: lightyellow;
