use EditorRequired attribute

--- a/Source/RazorClassLibrary/Components/PersonCard/PersonCard.razor
+++ b/Source/RazorClassLibrary/Components/PersonCard/PersonCard.razor
@@ -20,5 +20,7 @@
 
 @code
 {
-    [Parameter] public Person? Person { get; set; }
+    [Parameter] 
+    [EditorRequired]
+    public Person? Person { get; set; }
 }
