--- a/Source/BlazorServer/Pages/_Host.cshtml
+++ b/Source/BlazorServer/Pages/_Host.cshtml
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Client</title>
+    <title>Server</title>
     <link rel="stylesheet" href="/site.min.css" />
     <base href="/" />
 </head>
