--- a/Templates/Minimal/BlazorWasm/Components/DarkSwitch/DarkSwitch.razor
+++ b/Templates/Minimal/BlazorWasm/Components/DarkSwitch/DarkSwitch.razor
@@ -1,3 +1,3 @@
-@namespace TailBlazorProject.Components
+@namespace TailBlazorWasm.Components
 
 <fluent-switch title="toggle dark mode" @onclick="switchTheme" current-checked=isLightMode />
