--- a/Templates/Minimal/BlazorWasm/_Imports.razor
+++ b/Templates/Minimal/BlazorWasm/_Imports.razor
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using TailBlazorProject
-@using TailBlazorProject.Shared
-@using TailBlazorProject.Pages
-@using TailBlazorProject.Components
+@using TailBlazorWasm
+@using TailBlazorWasm.Shared
+@using TailBlazorWasm.Pages
+@using TailBlazorWasm.Components
