--- a/Templates/Minimal/BlazorWasm/wwwroot/index.html
+++ b/Templates/Minimal/BlazorWasm/wwwroot/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>TailBlazorProject</title>
+    <title>TailBlazorWasm</title>
     <base href="/" />
     <link href="css/App.min.css" rel="stylesheet" />
 
