--- a/Templates/Minimal/BlazorServer/Pages/Error.cshtml
+++ b/Templates/Minimal/BlazorServer/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BlazorServer.Pages.ErrorModel
+@model TailBlazorServer.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Error</title>
-    <link href="~/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/App.min.css" />
     <link href="~/css/site.css" rel="stylesheet" asp-append-version="true" />
 </head>
 
