--- a/Templates/Minimal/BlazorServer/Pages/FetchData.razor
+++ b/Templates/Minimal/BlazorServer/Pages/FetchData.razor
@@ -2,22 +2,25 @@
 
 <PageTitle>Weather forecast</PageTitle>
 
-@using BlazorServer.Data
+@using TailBlazorServer.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from a service.</p>
+<p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@if (forecasts is null)
 {
-    <p><em>Loading...</em></p>
+    <p class="mx-auto">
+        <Loading />
+    </p>
 }
 else
 {
-    <table class="table">
+    <table class="w-full mb-4 text-gray-800 border-collapse">
         <thead>
-            <tr>
+            <tr class="border-b-2 border-solid border-gray-200 
+                     bg-yellow-200">
                 <th>Date</th>
                 <th>Temp. (C)</th>
                 <th>Temp. (F)</th>
@@ -27,7 +30,7 @@ else
         <tbody>
             @foreach (var forecast in forecasts)
             {
-                <tr>
+                <tr class="bg-blue-300 even:bg-blue-200">
                     <td>@forecast.Date.ToShortDateString()</td>
                     <td>@forecast.TemperatureC</td>
                     <td>@forecast.TemperatureF</td>
@@ -43,6 +46,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        await Task.Delay(2000); // show the loading animation :D 
         forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
     }
 }
