--- a/Templates/Minimal/BlazorServer/Pages/Index.razor
+++ b/Templates/Minimal/BlazorServer/Pages/Index.razor
@@ -4,6 +4,6 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Welcome to TailBlazor !
 
 <SurveyPrompt Title="How is Blazor working for you?" />
