--- a/Templates/Minimal/BlazorServer/Pages/_Host.cshtml
+++ b/Templates/Minimal/BlazorServer/Pages/_Host.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
-@namespace BlazorServer.Pages
+@namespace TailBlazorServer.Pages
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
