--- a/Templates/Minimal/BlazorServer/Pages/_Layout.cshtml
+++ b/Templates/Minimal/BlazorServer/Pages/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace BlazorServer.Pages
+@namespace TailBlazorServer.Pages
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -8,10 +9,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="BlazorServer.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/App.min.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/@@fluentui/web-components"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+        <!-- https://fluent-components.azurewebsites.net/?path=/docs/getting-started-overview--page -->
+    <!-- https://docs.microsoft.com/en-us/fluent-ui/web-components/ -->
 </head>
 <body>
     @RenderBody()
