--- a/Templates/Minimal/BlazorServer/Shared/MainLayout.razor
+++ b/Templates/Minimal/BlazorServer/Shared/MainLayout.razor
@@ -1,19 +1,57 @@
-﻿@inherits LayoutComponentBase
+﻿
+@namespace TailBlazorServer.Shared
 
-<PageTitle>BlazorServer</PageTitle>
+@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+<div class="flex flex-col h-full">
+    
+    <div class="bg-gradient-to-r 
+                from-[#052767] via-[#052767] to-white 
+                dark:to-black 
+                py-1 px-3 flex flex-row-reverse h-12">
+
+        <button title="toggle navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+            <span class="navbar-toggler-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </span>
+        </button>
+
+        <DarkSwitch />
+        
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+    <div class="relative flex flex-col sm:flex-row flex-grow">
+
+        <div class="bg-gradient-to-b from-[#052767] to-[#3a0647]
+                    sm:w-[250px] sm:h-[calc(100vh - 3rem)] sm:sticky sm:top-0 sm:z-10">
+
+            <div class=@NavMenuCssClass @onclick="ToggleNavMenu">
+                <NavMenu />
+            </div>
+
         </div>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+        <main class="flex-1">
+
+            <article class="pt-5 px-4 sm:pl-8 sm:pr-6">
+                @Body
+            </article>
+
+        </main>
+
+    </div>
+
 </div>
+
+@code
+{
+    private string NavMenuCssClass => collapseNavMenu ? "hidden sm:block" : null;
+    private bool collapseNavMenu = true;
+
+    private void ToggleNavMenu()
+    {
+        collapseNavMenu = !collapseNavMenu;
+    }
+}
