--- a/Templates/Minimal/BlazorServer/_Imports.razor
+++ b/Templates/Minimal/BlazorServer/_Imports.razor
@@ -6,5 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorServer
-@using BlazorServer.Shared
+@using TailBlazorServer
+@using TailBlazorServer.Data
+@using TailBlazorServer.Pages
+@using TailBlazorServer.Shared
+@using TailBlazorServer.Components
