--- a/Templates/Full/BlazorServer/Pages/Error.cshtml
+++ b/Templates/Full/BlazorServer/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Server.Pages.ErrorModel
+@model BlazorServer.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html>
@@ -7,9 +7,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="css/App.min.css" />
     <title>Error</title>
-    <link href="~/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/css/app.css" rel="stylesheet" />
 </head>
 
 <body>
