--- a/Templates/Minimal/BlazorWasm/Components/SurveyPrompt.razor
+++ b/Templates/Minimal/BlazorWasm/Components/SurveyPrompt.razor
@@ -1,4 +1,6 @@
-﻿<div class="relative py-3 px-6 mb-4 mt-6 rounded
+﻿@namespace TailBlazorWasm.Components
+
+<div class="relative py-3 px-6 mb-4 mt-6 rounded
             border border-transparent border-gray-300
             text-gray-700 bg-gray-200 " role="alert">
 
