--- a/Templates/Minimal/BlazorWasm/Components/IconLink.razor
+++ b/Templates/Minimal/BlazorWasm/Components/IconLink.razor
@@ -1,3 +1,4 @@
+@namespace TailBlazorWasm.Components
 
 <NavLink class="px-4 py-2 hover:no-underline" href=@Link Match=NavLinkMatch.All target=@(NewTab ? "_blank" : null)>
     <span class="relative top-px inline-block w-8" aria-hidden="true">
