--- a/Templates/Minimal/BlazorWasm/Components/Loading.razor
+++ b/Templates/Minimal/BlazorWasm/Components/Loading.razor
@@ -1,3 +1,5 @@
+@namespace TailBlazorWasm.Components
+
 @* awesome face *@
 <div style="background-image: repeating-conic-gradient(#539ffd 0 12deg, #0576f8 12deg 24deg);" 
      class="rounded-full w-32 h-32 m-auto @animation">
