--- a/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
@@ -1,5 +1,5 @@
 
-@namespace TailBlazor.Shared.Layouts
+@namespace StaticWebAppsDemo.Layouts
 
 @inherits LayoutComponentBase
 @inject NavigationManager navManager
