--- a/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
@@ -1,6 +1,6 @@
-﻿@using TailBlazor.Shared.Components
+﻿@namespace StaticWebAppsDemo.Pages
 
-@namespace TailBlazor.Shared.Pages
+@using StaticWebAppsDemo.Components
 
 @page "/"
 
