--- a/StaticWebAppsDemo/BlazorWasm/App.razor
+++ b/StaticWebAppsDemo/BlazorWasm/App.razor
@@ -1,8 +1,6 @@
 ﻿
-@namespace TailBlazor.Client
  
-<Router AppAssembly="@typeof(App).Assembly"
-        AdditionalAssemblies="new[] { typeof(DarkSwitch).Assembly }">
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
