--- a/StaticWebAppsDemo/BlazorWasm/_Imports.razor
+++ b/StaticWebAppsDemo/BlazorWasm/_Imports.razor
@@ -7,7 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
-@using TailBlazor.Shared.Pages
-@using TailBlazor.Shared.Components
-@using TailBlazor.Shared.Layouts
-@using TailBlazor.Client
+@using StaticWebAppsDemo
+@using StaticWebAppsDemo.Pages
+@using StaticWebAppsDemo.Components
+@using StaticWebAppsDemo.Layouts
+@using SharedClassLibrary
