--- a/StaticWebAppsDemo/StaticWebAppsDemo.css
+++ b/StaticWebAppsDemo/StaticWebAppsDemo.css
@@ -1,7 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-@import "./RazorClassLibrary/RazorClassLibrary.css";
+@import "./BlazorWasm/BlazorWasm.css";
 
 .accent-blue {
   --accent-color: theme("colors.blue.600");
