--- a/StaticWebAppsDemo/BlazorWasm/App.razor
+++ b/StaticWebAppsDemo/BlazorWasm/App.razor
@@ -7,7 +7,7 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <NotFound />
         </LayoutView>
     </NotFound>
 </Router>
