desktop-only nav for now

--- a/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
@@ -2,7 +2,7 @@
 
 @if (blob is not null)
 {
-    <div class="sm:pl-64 mx-auto">
+    <div class="mx-auto">
         <MarkBlobView Blob="@(blob + ".md")" />
     </div>
 }
