proper local MarkBlob behavior

--- a/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
@@ -3,7 +3,14 @@
 @if (blob is not null)
 {
     <div class="h-full p-4">
-        <MarkBlobView Blob="@(blob + ".md")" />
+        <MarkBlobView Blob="@blob">
+            <BlobLoading>
+                <Loading/>
+            </BlobLoading>
+            <BlobNotFound>
+                <NotFound/>
+            </BlobNotFound>
+        </MarkBlobView>
     </div>
 }
 
