--- a/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
@@ -2,7 +2,7 @@
 
 @if (blob is not null)
 {
-    <div class="h-full p-4">
+    <div class="h-full">
         <MarkBlobView Blob="@blob">
             <BlobLoading>
                 <Loading/>
