--- a/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
@@ -6,15 +6,13 @@
 
 <PageTitle>Home</PageTitle>
 
-@if (people is null)
-{
-    <div class="pt-8">
+<div class="flex h-full w-full overflow-hidden">
+    @if (people is null)
+    {
         <Loading/>
-    </div>
-}
-else
-{
-    <div class="flex overflow-hidden">
+    }
+    else
+    {
         <ol class="flex items-center w-max p-6 animate-hscroll">
         @foreach(var person in people)
         {
@@ -26,8 +24,8 @@ else
             </li>
         }
         </ol>
-    </div>
-}
+    }
+</div>
 
 @code
 {
