--- a/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
@@ -4,11 +4,11 @@
 @inherits LayoutComponentBase
 @inject NavigationManager navManager
 
-<div class="h-full">
+<div class="h-full m-auto">
 
-    <div class="flex flex-row p-2 self-center justify-between px-4 ">
+    <div class="flex flex-row pl-4 pr-1 self-center justify-between">
 
-        <div class="text-2xl font-bold italic tracking-wide flex-grow">TailBlazor !</div>    
+        <div class="text-lg font-bold italic tracking-wide flex-grow self-center">WIP !</div>    
 
         <DarkSwitch />
 
@@ -31,7 +31,7 @@
     <div class="flex flex-row h-full">
 
         <div class="@NavMenuCssClass
-                    w-64 
+                    pl-1 pr-2
                     rounded-r-md
                 dark:bg-gray-900 dark:text-gray-300">
 
@@ -39,16 +39,23 @@
 
         </div>
 
-        <div class="overflow-auto h-full w-full sm:w-[calc(100%-16rem)] select-none @accentColor" @onclick="changeAccent">
+        <div class="overflow-auto h-full w-full px-px sm:pl-2 sm:pr-8 sm:pt-2 select-none @accentColor" @onclick="changeAccent">
             @Body
         </div>
 
     </div>
 
 
-    <div class="absolute sm:hidden bottom-4 right-8">
+    <div class="absolute w-14 h-14 sm:hidden bottom-4 right-8 bg-cyan-300 backdrop-blur-sm rounded-full p-2 shadow-md">
         <button @onclick="ToggleNavMenu" >
-            <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+            @if (hidden)
+            {
+                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7"></path></svg>
+            }
+            else
+            {
+                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+            }
         </button>
     </div>
 </div>
@@ -60,7 +67,7 @@
     private string accentColor = "accent-blue";
 
     private bool hidden = true;
-    private string? NavMenuCssClass => hidden ? "hidden sm:flex" : null;
+    private string? NavMenuCssClass => hidden ? "hidden sm:block" : null;
 
     void changeAccent()
     {
