less-ugly; initial responsive bits & dark mode (#77)
* proper local MarkBlob behavior

* responsive, still rough

* merge top level css

* correct icon size

* pull some css from IconLink.razor

* cap text width

* responsive mainlayout

* add debug-screens to show media query match

* initial dark mode

* correct Functions API BaseAddress usage

--- a/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
@@ -2,8 +2,15 @@
 
 @if (blob is not null)
 {
-    <div class="h-full p-4">
-        <MarkBlobView Blob="@(blob + ".md")" />
+    <div class="h-full">
+        <MarkBlobView Blob="@blob">
+            <BlobLoading>
+                <Loading/>
+            </BlobLoading>
+            <BlobNotFound>
+                <NotFound/>
+            </BlobNotFound>
+        </MarkBlobView>
     </div>
 }
 
