--- a/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/MarkBlob.razor
@@ -2,7 +2,7 @@
 
 @if (blob is not null)
 {
-    <div class="h-full">
+    <div class="h-full m-auto">
         <MarkBlobView Blob="@blob">
             <BlobLoading>
                 <Loading/>
