--- a/StaticWebAppsDemo/BlazorWasm/Components/PersonCard/PersonCard.razor.css
+++ b/StaticWebAppsDemo/BlazorWasm/Components/PersonCard/PersonCard.razor.css
@@ -3,8 +3,17 @@
   @apply shadow-md rounded-lg h-56 w-64 m-2;
   @apply md:shadow-md md:rounded-xl md:h-64 md:w-96 md:m-4;
   @apply ring-2 hover:ring-4 ring-accent;
-  @apply transition-all duration-300;
   @apply hover:cursor-pointer;
-
   backface-visibility: hidden;
+}
+
+.personHeader {
+  @apply flex justify-between h-1/4 p-2
+            bg-secondary-100 dark:bg-primary-700 border-b border-accent
+              rounded-t-lg md:rounded-t-xl;
+}
+
+.personHeader > div {
+  @apply bg-secondary-100 dark:bg-primary-700;
+  @apply text-xl self-center;
 }
