--- a/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
@@ -16,7 +16,7 @@
         <ol class="flex items-center w-max p-6 animate-hscroll">
         @foreach(var person in people)
         {
-            <li class="transition duration-75 ease-in-out
+            <li class="
                     even:rotate-1 odd:-rotate-2 
                     hover:rotate-0 hover:scale-105 md:hover:scale-110
                     no-hover:even:font-serif">
