--- a/StaticWebAppsDemo/BlazorWasm/Components/IconLink/IconLink.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Components/IconLink/IconLink.razor
@@ -1,20 +1,37 @@
 @namespace StaticWebAppsDemo.Components
 
 <div class="link-container @Class">
-<NavLink class="justify-start flex items-center" href=@Link Match=NavLinkMatch.All target=@(NewTab ? "_blank" : null)>
-    <span class=" relative top-px @(Large ? "w-8" : "w-4 ml-4")" aria-hidden="true">
-        @ChildContent
-    </span> 
-    <span class="ml-3">
-        @Text
-    </span>
-</NavLink>
+
+@if (Link is string)
+{
+    <NavLink class="justify-start flex items-center" href=@Link Match=NavLinkMatch.All target=@(NewTab ? "_blank" : null)>
+        @Inner
+    </NavLink>
+}
+else
+{
+    <div class="justify-start flex items-center">
+        @Inner
+    </div>
+}
+
 </div>
+
 @code 
 {
+    RenderFragment Inner => __builder =>
+    {
+        <span class=" relative top-px @(Large ? "w-8" : "w-4 ml-4")" aria-hidden="true">
+            @ChildContent
+        </span> 
+        <span class="ml-3">
+            @Text
+        </span>
+    };
+    
     [Parameter]
     public bool NewTab { get; set; }
-
+    
     [Parameter]
     public bool Large { get; set; }
 
@@ -23,7 +40,6 @@
     public string Text { get; set; }
 
     [Parameter]
-    [EditorRequired]
     public string Link { get; set; }
 
     [Parameter]
