remove `list-disc` from PersonCard

--- a/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Pages/Index.razor
@@ -17,6 +17,7 @@
         @foreach(var person in people)
         {
             <li class="
+                    list-none
                     even:rotate-1 odd:-rotate-2 
                     hover:rotate-0 hover:scale-105 md:hover:scale-110
                     no-hover:even:font-serif">
