improve dark mode a bit (#78)
* only use debug-screens if IsDevelopent

* fix NotFound/Loading placement

* fix hover and color

* global transitions and text/bg color

* pull pr up from MainLayout

* remove redundant transitions; fix coloring

* remove redundant transition

* fix api url

* swap button for anchor

* change 'home' icon to 'cards'

* fix darkswitch js

* initial markblob css

* non-linking IconLink..........

* update links

* remove `list-disc` from PersonCard

--- a/StaticWebAppsDemo/BlazorWasm/Components/Loading.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Components/Loading.razor
@@ -1,9 +1,9 @@
 @namespace StaticWebAppsDemo.Components
 
 <div style="background-image: repeating-conic-gradient(#539ffd 0 12deg, #0576f8 12deg 24deg);" 
-     class="rounded-full w-32 h-32 m-auto @animation">
-        <div class="absolute w-full h-full p-3 rounded-full
-                    transition-transform ease-in duration-400 hover:scale-110">
+     class="rounded-full w-24 h-24 m-auto @animation">
+        <p class="absolute w-full h-full p-3 rounded-full
+                    hover:scale-110">
                   
           <svg xmlns="http://www.w3.org/2000/svg" id="svg1923" viewBox="0 0 733 733">
             <circle cy="366.5" cx="366.5" r="366.5"></circle>
@@ -16,7 +16,7 @@
             <path d="m565 324c4-5 5-34 4-50-2-14-6-24-8-24-1 0-3 2-6 5-17 17-47 13-58-9-7-16-4-31 8-43 4-4 7-8 7-9 0 0-4-2-8-3-51-17-105 20-115 80-3 15 0 43 3 53z" fill="#fff"></path>
             <path d="m504 590s-46 40-105 53c-66 15-114-7-114-7s14-76 93-95c76-18 126 49 126 49z" fill="#f9bedd"></path>
           </svg>
-        </div>
+        </p>
 </div>
 
 @code
