--- a/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
+++ b/StaticWebAppsDemo/BlazorWasm/Layouts/MainLayout.razor
@@ -1,10 +1,11 @@
 
 @namespace StaticWebAppsDemo.Layouts
+@using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 
 @inherits LayoutComponentBase
 @inject NavigationManager navManager
 
-<div class="h-full m-auto">
+<div class="h-full m-auto @debug">
 
     <div class="flex flex-row pl-4 pr-1 self-center justify-between">
 
@@ -12,17 +13,12 @@
 
         <DarkSwitch />
 
-        <button type="button"
-                class="flex m-auto rounded-full px-4
-                        focus:outline-none group"
-
-                @onclick='() => navManager.NavigateTo("https://github.com/McNerdius/TailBlazor")'>
-
-            <svg class="h-6 w-6 mx-1 self-center group-hover:scale-125 transition-transform duration-75" viewBox="0 0 16 16" fill="currentColor">
+        <a href="https://github.com/McNerdius/TailBlazor" target="_blank"
+           class="pt-2 px-3 transition-transform ease-in duration-100 hover:scale-125" >
+            <svg class="h-6 w-6 mx-1 self-center " viewBox="0 0 16 16" fill="currentColor">
                 <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
             </svg>
-
-        </button>
+        </a>
 
     </div>
 
@@ -36,7 +32,7 @@
 
         </div>
 
-        <div class="overflow-auto h-full w-full px-px sm:pl-2 sm:pr-8 sm:pt-2 md:pr-16 lg:pr-32 select-none @accentColor" @onclick="changeAccent">
+        <div class="overflow-auto h-full w-full px-px sm:pl-2select-none @accentColor" @onclick="changeAccent">
             @Body
         </div>
 
@@ -61,6 +57,8 @@
 
 @code 
 {
+    [Inject] public IWebAssemblyHostEnvironment HostEnvironment { get; set; }
+    private string debug => HostEnvironment.IsDevelopment() ? "debug-screens" : "";
     private string accentColor = "accent-blue";
 
     private bool hidden = true;
